Updated class with all attributes and parameters

--- a/Fashion.ipynb
+++ b/Fashion.ipynb
@@ -147,6 +147,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FFNNClassifier:\n",
+    "    W_ = [] # List of Weights\n",
+    "    b_ = [] # List of bias\n",
+    "    L_ = 0 # Number of layers\n",
+    "    K_ = 0 # Number of outputs\n",
+    "    n_iter_ = 0 # Current number of iterations \n",
+    "    \n",
+    "    def __init__(hidden_layer_sizes=(100,), activation='relu', optimizer='adam', weight_decay=0.0001, batch_size=200, learning_rate=0.001, num_epochs=200, weight_init='xavier'):\n",
+    "        self.hidden_layer_sizes = hidden_layer_sizes # Tuple of hidden layer sizes\n",
+    "        self.activation = activation # 'identity', 'logistic', 'tanh', 'relu'\n",
+    "        self.optimizer = optimizer # 'normal', 'sgd', 'momentum', 'nesterov', 'rmsprop', 'adam', 'nadam'\n",
+    "        self.weight_decay = weight_decay # L2 regularization hyperparameter\n",
+    "        self.batch_size = batch_size # Batch size\n",
+    "        self.learning_rate = learning_rate # Learning Rate\n",
+    "        self.num_epochs = num_epochs # Number of epochs\n",
+    "        self.weight_init = weight_init # 'random', 'xavier'\n",
+    "    \n",
+    "    def act(z):\n",
+    "        if(self.activation == 'identity'):\n",
+    "            return z\n",
+    "        elif(self.activation == 'logistic'):\n",
+    "            return 1 / (1 + np.exp(-z))\n",
+    "        elif(self.activation == 'tanh'):\n",
+    "            return np.tanh(z)\n",
+    "        elif(self.activation == 'relu'):\n",
+    "            return np.maximum(z, np.zeros(z.shape)) \n",
+    "        # Handle input error\n",
+    "    \n",
+    "    def deriv_act(z):\n",
+    "        if(self.activation == 'identity'):\n",
+    "            return np.ones(z.shape)\n",
+    "        elif(self.activation == 'logistic'):\n",
+    "            return 1 / (2 + np.exp(-z) + np.exp(z))\n",
+    "        elif(self.activation == 'tanh'):\n",
+    "            return np.cosh(z) ** -2\n",
+    "        elif(self.activation == 'relu'):\n",
+    "            return np.maximum(np.sign(z), np.zeros(z.shape)) \n",
+    "        # Handle input error\n",
+    "    \n",
+    "    def ocat(z):\n",
+    "        return np.exp(z) / np.exp(z).sum()\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
