Updated minor errors - 1

--- a/Fashion.ipynb
+++ b/Fashion.ipynb
@@ -104,7 +104,7 @@
     "        for i in range(1, self.L):\n",
     "            a[i] = (b[i] + np.matmul(W[i].T, h[i - 1]))\n",
     "            h[i] = act(a[i])\n",
-    "        aL = oact(bL + np.matmul(WL.T, h[L - 1]))\n",
+    "        aL = act(bL + np.matmul(WL.T, h[L - 1]))\n",
     "        Y_pred = oact(aL)\n",
     "        return a, h, aL, Y_pred\n",
     "    \n",
@@ -140,9 +140,8 @@
     "            bL = eta * np.asarray(gradB[0])\n",
     "        return W, b, WL, bL\n",
     "    \n",
-    "    def FFNClassifier(self, X_train, Y_train):\n",
-    "        W, b, WL, bL = grad_desc(X_train.T, Y_train.T, max_iter, eta)\n",
-    "        return W, b, WL, bL"
+    "    def fit(self, X_train, Y_train):\n",
+    "        self.W, self.b, self.WL, self.bL = grad_desc(X_train.T, Y_train.T, max_iter, eta)"
    ]
   },
   {
