--- a/Fashion.ipynb
+++ b/Fashion.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -76,13 +68,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "class FNNClassifier:\n",
-    "    def __init__(self, hidden_layer_sizes=(100,), activation='relu', optimizer='adam', weight_decay=0.0001, batch_size=200, learning_rate=0.001, num_epochs=200, weight_init='xavier'):\n",
-    "        self.hidden_layer_sizes = hidden_layer_sizes # Tuple of hidden layer sizes\n",
+    "    def __init__(self, N, L, activation='relu', optimizer='adam', weight_decay=0.0001, batch_size=200, learning_rate=0.001, num_epochs=200, weight_init='xavier'):\n",
     "        self.activation = activation # 'identity', 'logistic', 'tanh', 'relu'\n",
     "        self.optimizer = optimizer # 'normal', 'sgd', 'momentum', 'nesterov', 'rmsprop', 'adam', 'nadam'\n",
     "        self.weight_decay = weight_decay # L2 regularization hyperparameter\n",
@@ -90,11 +81,17 @@
     "        self.learning_rate = learning_rate # Learning Rate\n",
     "        self.num_epochs = num_epochs # Number of epochs\n",
     "        self.weight_init = weight_init # 'random', 'xavier'\n",
+    "        self.n = 100\n",
+    "        self.K = 10\n",
+    "        self.layer_sizes = np.zeros((L + 2))\n",
+    "        self.layer_sizes[1 : L + 1] = N\n",
+    "        self.W = []\n",
+    "        self.b = []\n",
+    "        self.a = []\n",
+    "        self.h = []\n",
     "    \n",
     "    def act(self, z):\n",
-    "        if(self.activation == 'identity'):\n",
-    "            return z\n",
-    "        elif(self.activation == 'logistic'):\n",
+    "        if(self.activation == 'logistic'):\n",
     "            return 1 / (1 + np.exp(-z))\n",
     "        elif(self.activation == 'tanh'):\n",
     "            return np.tanh(z)\n",
@@ -102,53 +99,52 @@
     "            return np.maximum(z, np.zeros(z.shape)) \n",
     "    \n",
     "    def deriv_act(self, z):\n",
-    "        if(self.activation == 'identity'):\n",
-    "            return np.ones(z.shape)\n",
-    "        elif(self.activation == 'logistic'):\n",
+    "        if(self.activation == 'logistic'):\n",
     "            return 1 / (2 + np.exp(-z) + np.exp(z))\n",
     "        elif(self.activation == 'tanh'):\n",
     "            return np.cosh(z) ** -2\n",
     "        elif(self.activation == 'relu'):\n",
     "            return np.maximum(np.sign(z), np.zeros(z.shape))\n",
     "    \n",
-    "    def oact(z):\n",
+    "    def oact(self, z):\n",
     "        return np.exp(z) / np.exp(z).sum()\n",
     "    \n",
     "    def forward_prop(self, X):\n",
-    "        self.a, self.h = np.zeros((self.L, self.N, self.n)), np.zeros((self.L, self.N, self.n))\n",
-    "        self.h[0] = X\n",
-    "        self.aL = np.zeros((self.K, self.n))\n",
+    "        self.a = [ np.zeros((1, 1))]\n",
+    "        self.h = [X]\n",
     "        \n",
-    "        for i in range(1, self.L):\n",
-    "            self.a[i] = (self.b[i] + np.matmul(self.W[i].T, self.h[i - 1]))\n",
-    "            self.h[i] = act(self.a[i])\n",
-    "        self.aL = act(self.bL + np.matmul(self.WL.T, self.h[L - 1]))\n",
-    "        Y_pred = oact(self.aL)\n",
-    "        return Y_pred\n",
+    "        for i in range(1, self.L + 1):\n",
+    "            self.a.append( (self.b[i] + (self.W[i].T @ self.h[i - 1])) )\n",
+    "            self.h.append(act(self.a[i]))\n",
+    "        self.h[-1] = oact(self.a[-1])\n",
+    "        return self.h[-1]\n",
     "    \n",
-    "    def back_prop(self, Y, Y_pred):\n",
-    "        self.gradW, self.gradB, self.gradh, self.grada = [], [], [], []\n",
+    "    def back_prop(self, Y_pred):\n",
+    "        self.gradW, self.gradB, self.grada = [], [], []\n",
+    "        self.gradh = [ np.zeros((1, 1))]\n",
     "        self.grada.append(-(self.ey - Y_pred))\n",
     "        for i in range (L, 0, -1):\n",
-    "            self.gradW.append(np.matmul(self.grada[L - i], self.h[L - i - 1].T))\n",
+    "            self.gradW.append(np.matmul(self.grada[L - i], self.h[i - 1].T))\n",
     "            self.gradB.append(self.grada[L - i])\n",
-    "            self.gradh.append(np.matmul(self.W[L - i].T, self.grada[L - i]))\n",
-    "            self.grada.append(np.matmul(self.gradh[L - i]) * derivact(self.a[L - i - 1]))\n",
+    "            self.gradh.append(np.matmul(self.W[i].T, self.grada[L - i]))\n",
+    "            self.grada.append(np.matmul(self.gradh[L - i + 1]) * deriv_act(self.a[i - 1]))\n",
     "            \n",
     "            #if(self.optimizer == 'sgd'):\n",
     "            \n",
     "        return\n",
     "    \n",
     "    def grad_desc(self, X, Y):\n",
-    "        self.W = np.zeros((self.L, self.N, self.N))\n",
-    "        self.b = np.zeros((self.L, self.N))\n",
-    "        self.WL = np.zeros((self.N, self.K))\n",
-    "        self.bL = np.zeros(self.K)\n",
+    "        self.W = [np.zeros((self.N, self.N)) for _ in range(0, L)]\n",
+    "        self.b = [np.zeros(self.N) for _ in range(0, L)]\n",
+    "        self.W.append(np.zeros((self.N, self.K)))\n",
+    "        self.b.append(np.zeros(self.K))\n",
+    "        \n",
     "        update_W, update_b, update_WL, update_bL = self.W, self.b, self.WL, self.bL\n",
     "        v_W, v_b, v_WL, v_bL = self.W, self.b, self.WL, self.bL\n",
-    "        t = 0\n",
-    "        while t < self.num_epochs:\n",
-    "            t += 1\n",
+    "        \n",
+    "        \n",
+    "        for t in range(1, self.num_epochs + 1):\n",
+    "            \n",
     "            Y_pred = forward_prop(X)\n",
     "            \n",
     "            if(self.optimizer == 'nesterov'):\n",
@@ -159,12 +155,10 @@
     "                self.WL -= ngamma * update_WL\n",
     "                self.bL -= ngamma * update_bL\n",
     "            \n",
-    "            back_prop(Y, Y_pred)\n",
+    "            back_prop(Y_pred)\n",
     "            \n",
-    "            dW = np.asarray(self.gradW[L:0:-1])\n",
-    "            db = np.asarray(self.gradB[L:0:-1])\n",
-    "            dWL = np.asarray(self.gradW[0])\n",
-    "            dbL = np.asarray(self.gradB[0])\n",
+    "            dW = self.gradW[::-1]\n",
+    "            db = self.gradB[::-1]\n",
     "            \n",
     "            if(self.optimizer == 'normal'):\n",
     "                update_W = self.learning_rate * dW\n",
@@ -211,11 +205,12 @@
     "            self.bL -= update_bL\n",
     "    \n",
     "    def fit(self, X_train, Y_train):\n",
-    "        self.n, self.N = X_train.shape\n",
-    "        self.K = np.max(Y_train)\n",
-    "        self.ey = np.zeros((self.K, self.n))\n",
+    "        n, N = X_train.shape\n",
+    "        K = np.max(Y_train) # Y_train must have values from 1 to K\n",
+    "        self.layer_sizes[self.L - 1] = K\n",
+    "        self.ey = np.zeros((K, n))\n",
     "        rows = np.arange(n)\n",
-    "        self.ey[Y - 1, rows] = 1\n",
+    "        self.ey[Y_train - 1, rows] = 1\n",
     "        grad_desc(X_train.T, Y_train.T)\n",
     "        \n",
     "    def predict(self, X_test):\n",
@@ -224,10 +219,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((150, 4), (150,))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "X, y = load_iris(return_X_y=True)\n",
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.54164282e-09, 9.62718333e-09, 2.61693975e-08, 7.11357977e-08,\n",
+       "       1.93367146e-07, 5.25626400e-07, 1.42880069e-06, 3.88388295e-06,\n",
+       "       1.05574885e-05, 2.86982290e-05, 7.80098745e-05, 2.12052824e-04,\n",
+       "       5.76419339e-04, 1.56687021e-03, 4.25919483e-03, 1.15776919e-02,\n",
+       "       3.14714295e-02, 8.55482150e-02, 2.32544158e-01, 6.32120560e-01])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = FNNClassifier(10, 5, activation = 'logistic', optimizer = 'adam', num_epochs = 100)\n",
+    "model.oact(np.array(range(-10, 10)))"
+   ]
   }
  ],
  "metadata": {
