Minor bug fix - 4

--- a/Fashion.ipynb
+++ b/Fashion.ipynb
@@ -135,6 +135,7 @@
     "    \n",
     "    def grad_desc(self, X, Y):\n",
     "        self.W = [np.zeros((self.N, self.N)) for _ in range(0, L)]\n",
+    "        self.W[0] = np.zeros((X.shape[0], self.N))\n",
     "        self.b = [np.zeros(self.N) for _ in range(0, L)]\n",
     "        self.W.append(np.zeros((self.N, self.K)))\n",
     "        self.b.append(np.zeros(self.K))\n",
