Added optimizations adam and nadam

--- a/Fashion.ipynb
+++ b/Fashion.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,8 +139,9 @@
     "        self.W.append(np.zeros((self.N, self.K)))\n",
     "        self.b.append(np.zeros(self.K))\n",
     "        \n",
-    "        update_W, update_b, update_WL, update_bL = self.W, self.b, self.WL, self.bL\n",
-    "        v_W, v_b, v_WL, v_bL = self.W, self.b, self.WL, self.bL\n",
+    "        update_W, update_b = self.W, self.b\n",
+    "        v_W, v_b = self.W, self.b\n",
+    "        m_W, m_b = self.W, self.b\n",
     "        \n",
     "        \n",
     "        for t in range(1, self.num_epochs + 1):\n",
@@ -148,12 +149,10 @@
     "            Y_pred = forward_prop(X)\n",
     "            \n",
     "            if(self.optimizer == 'nesterov'):\n",
-    "                W , b, WL, bL = self.W, self.b, self.WL, self.bL\n",
+    "                W , b = self.W, self.b\n",
     "                ngamma = 0.9 # Hyperparameter\n",
-    "                self.W -= ngamma * update_W\n",
-    "                self.b -= ngamma * update_b\n",
-    "                self.WL -= ngamma * update_WL\n",
-    "                self.bL -= ngamma * update_bL\n",
+    "                self.W = [u - ngamma * v for u, v in zip(self.W, update_W)]\n",
+    "                self.b = [u - ngamma * v for u, v in zip(self.b, update_b)]\n",
     "            \n",
     "            back_prop(Y_pred)\n",
     "            \n",
@@ -161,48 +160,56 @@
     "            db = self.gradB[::-1]\n",
     "            \n",
     "            if(self.optimizer == 'normal'):\n",
-    "                update_W = self.learning_rate * dW\n",
-    "                update_b = self.learning_rate * db\n",
-    "                update_WL = self.learning_rate * dWL\n",
-    "                update_bL = self.learning_rate * dbL\n",
+    "                update_W = [self.learning_rate * u for u in dW]\n",
+    "                update_b = [self.learning_rate * u for u in db]\n",
     "                \n",
     "            #elif(self.optimizer == 'sgd'):\n",
     "                \n",
     "                \n",
     "            elif(self.optimizer == 'momentum'):\n",
     "                mgamma = 0.9 # Hyperparameter\n",
-    "                update_W = mgamma * update_W + self.learning_rate * dW\n",
-    "                update_b = mgamma * update_b + self.learning_rate * db\n",
-    "                update_WL = mgamma * update_WL + self.learning_rate * dWL\n",
-    "                update_bL = mgamma * update_bL + self.learning_rate * dbL\n",
+    "                update_W = [mgamma * u + self.learning_rate * v for u, v in zip(update_W, dW)]\n",
+    "                update_b = [mgamma * u + self.learning_rate * v for u, v in zip(update_b, db)]\n",
     "            \n",
     "            elif(self.optimizer == 'nesterov'):\n",
-    "                self.W, self.b, self.WL, self.bL = W, b, WL, bL\n",
-    "                update_W = ngamma * update_W + self.learning_rate * dW\n",
-    "                update_b = ngamma * update_b + self.learning_rate * db\n",
-    "                update_WL = ngamma * update_WL + self.learning_rate * dWL\n",
-    "                update_bL = ngamma * update_bL + self.learning_rate * dbL\n",
+    "                self.W, self.b = W, b\n",
+    "                update_W = [ngamma * u + self.learning_rate * v for u, v in zip(update_W, dW)]\n",
+    "                update_b = [ngamma * u + self.learning_rate * v for u, v in zip(update_b, db)]\n",
     "            \n",
     "            elif(self.optimizer == 'rmsprop'):\n",
     "                rbeta = 0.9\n",
     "                epsilon = 0.1\n",
-    "                v_W = rbeta * v_W + (1 - rbeta) * (dW ** 2)\n",
-    "                v_b = rbeta * v_b + (1 - rbeta) * (db ** 2)\n",
-    "                v_WL = rbeta * v_WL + (1 - rbeta) * (dWL ** 2)\n",
-    "                v_bL = rbeta * v_bL + (1 - rbeta) * (dbL ** 2)\n",
-    "                update_W = (self.learning_rate * dW) / np.sqrt(v_W + epsilon)\n",
-    "                update_b = (self.learning_rate * db) / np.sqrt(v_b + epsilon)\n",
-    "                update_WL = (self.learning_rate * dWL) / np.sqrt(v_WL + epsilon)\n",
-    "                update_bL = (self.learning_rate * dbL) / np.sqrt(v_bL + epsilon)\n",
+    "                v_W = [rbeta * u + (1 - rbeta) * (v ** 2) for u, v in zip(v_W, dW)]\n",
+    "                v_b = [rbeta * u + (1 - rbeta) * (v ** 2) for u, v in zip(v_b, db)]\n",
+    "                update_W = [(self.learning_rate * u) / np.sqrt(v + epsilon) for u, v in zip(dW, v_W)]\n",
+    "                update_b = [(self.learning_rate * u) / np.sqrt(v + epsilon) for u, v in zip(db, v_b)]\n",
     "                \n",
-    "            #elif(self.optimizer == 'adam'):\n",
+    "            elif(self.optimizer == 'adam'):\n",
+    "                abeta1 = 0.99\n",
+    "                abeta2 = 0.999\n",
+    "                epsilon = 0.1\n",
+    "                m_W = [abeta1 * u + (1 - abeta1) * v for u, v in zip(m_W, dW)]\n",
+    "                m_b = [abeta1 * u + (1 - abeta1) * v for u, v in zip(m_b, db)]\n",
+    "                v_W = [abeta2 * u + (1 - abeta2) * (v ** 2) for u, v in zip(v_W, dW)]\n",
+    "                v_b = [abeta2 * u + (1 - abeta2) * (v ** 2) for u, v in zip(v_b, db)]\n",
+    "                update_W = [( (self.learning_rate * u) / (1 - abeta1 ** t) ) / np.sqrt( (v / (1 - abeta2 ** t)) + epsilon) for u, v in zip(m_W, v_W)]\n",
+    "                update_b = [( (self.learning_rate * u) / (1 - abeta1 ** t) ) / np.sqrt( (v / (1 - abeta2 ** t)) + epsilon) for u, v in zip(m_b, v_b)]\n",
     "                 \n",
-    "            #elif(self.optimizer == 'nadam'):\n",
+    "            elif(self.optimizer == 'nadam'):\n",
+    "                nbeta1 = 0.99\n",
+    "                nbeta2 = 0.999\n",
+    "                epsilon = 0.1\n",
+    "                m_W = [nbeta1 * u + (1 - nbeta1) * v for u, v in zip(m_W, dW)]\n",
+    "                m_b = [nbeta1 * u + (1 - nbeta1) * v for u, v in zip(m_b, db)]\n",
+    "                v_W = [nbeta2 * u + (1 - nbeta2) * (v ** 2) for u, v in zip(v_W, dW)]\n",
+    "                v_b = [nbeta2 * u + (1 - nbeta2) * (v ** 2) for u, v in zip(v_b, db)]\n",
+    "                update_W = [(self.learning_rate * (nbeta1 * u + (1 - nbeta1) * v)) / (1 - abeta1 ** t) for u, v in zip(m_W, dW)]\n",
+    "                update_W = [ (u) / np.sqrt( (v / (1 - abeta2 ** t)) + epsilon) for u, v in zip(m_W, v_W)]\n",
+    "                update_b = [(self.learning_rate * (nbeta1 * u + (1 - nbeta1) * v)) / (1 - abeta1 ** t) for u, v in zip(m_b, db)]\n",
+    "                update_b = [ (u) / np.sqrt( (v / (1 - abeta2 ** t)) + epsilon) for u, v in zip(m_b, v_b)]\n",
     "            \n",
-    "            self.W -= update_W\n",
-    "            self.b -= update_b\n",
-    "            self.WL -= update_WL\n",
-    "            self.bL -= update_bL\n",
+    "            self.W = [u - v for u, v in zip(self.W, update_W)]\n",
+    "            self.b = [u - v for u, v in zip(self.b, update_b)]\n",
     "    \n",
     "    def fit(self, X_train, Y_train):\n",
     "        n, N = X_train.shape\n",
