--- a/Fashion.ipynb
+++ b/Fashion.ipynb
@@ -99,10 +99,6 @@
     "        self.grada.append(-(self.ey - Y_pred))\n",
     "        for i in range (self.L, 0, -1):\n",
     "            self.gradW.append((self.grada[self.L - i] @ self.h[i - 1].T).T)\n",
-    "            #print('-------------------------')\n",
-    "            #print(self.grada[self.L - i])\n",
-    "            #print(self.h[i - 1].T)\n",
-    "            #print(self.grada[self.L - i] @ self.h[i - 1].T)\n",
     "            self.gradB.append(self.grada[self.L - i].sum(axis=1))\n",
     "            self.gradh.append(self.W[i] @ self.grada[self.L - i])\n",
     "            self.grada.append( self.gradh[self.L - i + 1] * self.deriv_act(self.a[i - 1]))\n",
@@ -119,6 +115,26 @@
     "            self.W.append(1 + 10 * np.random.rand(self.N, self.K))\n",
     "            self.W[1] = 1 + 10 * np.random.rand(num, self.W[1].shape[1])\n",
     "            self.b.append(1 + 10 * np.random.rand(self.K))\n",
+    "            \n",
+    "        '''\n",
+    "        elif self.weight_init == 'Xavier':\n",
+    "# example of the xavier weight initialization\n",
+    "from math import sqrt\n",
+    "from numpy import mean\n",
+    "from numpy.random import rand\n",
+    "# number of nodes in the previous layer\n",
+    "n = 10\n",
+    "# calculate the range for the weights\n",
+    "lower, upper = -(1.0 / sqrt(n)), (1.0 / sqrt(n))\n",
+    "# generate random numbers\n",
+    "numbers = rand(1000)\n",
+    "# scale to the desired range\n",
+    "scaled = lower + numbers * (upper - lower)\n",
+    "# summarize\n",
+    "print(lower, upper)\n",
+    "print(scaled.min(), scaled.max())\n",
+    "print(scaled.mean(), scaled.std())\n",
+    "        '''\n",
     "    \n",
     "    def grad_desc(self, X, Y):\n",
     "        \n",
@@ -147,11 +163,6 @@
     "                self.b = [u - ngamma * v for u, v in zip(self.b, update_b)]\n",
     "            \n",
     "            self.back_prop(Y_pred)\n",
-    "            \n",
-    "            #print('---------------------- gW')\n",
-    "            #print(self.gradW)\n",
-    "            #print('---------------------- gB')\n",
-    "            #print(self.gradB)\n",
     "            \n",
     "            dW = self.gradW[::-1]\n",
     "            db = self.gradB[::-1]\n",
@@ -205,6 +216,8 @@
     "                update_b = [(self.learning_rate * (nbeta1 * u + (1 - nbeta1) * v)) / (1 - nbeta1 ** t) for u, v in zip(m_b, db)]\n",
     "                update_b = [ (u) / np.sqrt( (v / (1 - nbeta2 ** t)) + epsilon) for u, v in zip(m_b, v_b)]\n",
     "            \n",
+    "            update_W += dW * weight_decay\n",
+    "            \n",
     "            self.W = [u - v for u, v in zip(self.W, update_W)]\n",
     "            self.b = [u - v for u, v in zip(self.b, update_b)]\n",
     "    \n",
@@ -219,8 +232,6 @@
     "        self.grad_desc(X_train.T, Y_train.T)\n",
     "        \n",
     "    def predict_proba(self, X_test):\n",
-    "        #print(self.W)\n",
-    "        #print(self.b)\n",
     "        return self.forward_prop(X_test.T).T"
    ]
   },
