--- a/Fashion.ipynb
+++ b/Fashion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,20 +148,28 @@
     "        rows = np.arange(self.n)\n",
     "        ey[Y.T - 1, rows] = 1\n",
     "        \n",
-    "        total_iterations = self.num_epochs\n",
-    "        if(self.optimizer == 'sgd'):\n",
-    "            total_iterations *= ((self.n + self.batch_size - 1) // self.batch_size)\n",
-    "        \n",
     "        for t in range(1, self.num_epochs + 1):\n",
-    "                \n",
+    "            \n",
     "            if(self.optimizer == 'sgd'):\n",
-    "                idx = np.random.randint(self.n, size = self.batch_size)\n",
-    "                ey = np.zeros((self.K, self.batch_size))\n",
-    "                rows = np.arange(self.batch_size)\n",
-    "                ey[Y.T[idx] - 1, rows] = 1\n",
-    "                Y_pred = self.forward_prop(X.T[idx, :].T)\n",
-    "            else:\n",
-    "                Y_pred = self.forward_prop(X)\n",
+    "                for tt in range(0, ((self.n + self.batch_size - 1) // self.batch_size)):\n",
+    "                    idx = np.random.randint(self.n, size = self.batch_size)\n",
+    "                    ey = np.zeros((self.K, self.batch_size))\n",
+    "                    rows = np.arange(self.batch_size)\n",
+    "                    ey[Y.T[idx] - 1, rows] = 1\n",
+    "                    Y_pred = self.forward_prop(X.T[idx, :].T)\n",
+    "\n",
+    "                    self.back_prop(Y_pred, ey)\n",
+    "                    dW = self.gradW[::-1]\n",
+    "                    db = self.gradB[::-1]\n",
+    "\n",
+    "                    update_W = [self.learning_rate * u for u in dW]\n",
+    "                    update_b = [self.learning_rate * u for u in db]\n",
+    "                    update_W = [u + v * self.weight_decay for u, v in zip(update_W, dW)]\n",
+    "                    self.W = [u - v for u, v in zip(self.W, update_W)]\n",
+    "                    self.b = [u - v for u, v in zip(self.b, update_b)]\n",
+    "                continue\n",
+    "                \n",
+    "            Y_pred = self.forward_prop(X)\n",
     "            \n",
     "            if(self.optimizer == 'nesterov'):\n",
     "                W , b = self.W, self.b\n",
@@ -174,7 +182,7 @@
     "            dW = self.gradW[::-1]\n",
     "            db = self.gradB[::-1]\n",
     "            \n",
-    "            if(self.optimizer == 'normal' or self.optimizer == 'sgd'):\n",
+    "            if(self.optimizer == 'normal'):\n",
     "                update_W = [self.learning_rate * u for u in dW]\n",
     "                update_b = [self.learning_rate * u for u in db]\n",
     "\n",
@@ -252,21 +260,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'weight_decay' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-6c1f9f0cf57c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mFNNClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactivation\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'tanh'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'sgd'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m25\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_epochs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m200\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-15-c7bcbefcd9a9>\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X_train, Y_train)\u001b[0m\n\u001b[0;32m    168\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayer_sizes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mL\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mK\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    169\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mK\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mK\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 170\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad_desc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    171\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    172\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mpredict_proba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-15-c7bcbefcd9a9>\u001b[0m in \u001b[0;36mgrad_desc\u001b[1;34m(self, X, Y)\u001b[0m\n\u001b[0;32m    157\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    158\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 159\u001b[1;33m             \u001b[0mupdate_W\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mdW\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mweight_decay\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    160\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    161\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mu\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mupdate_W\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'weight_decay' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[3.59099535e-18, 2.34229116e-10, 6.08696077e-13, 9.99944458e-01,\n",
+       "        3.16884025e-28, 5.55421397e-05],\n",
+       "       [9.62028555e-05, 9.99903637e-01, 1.57574863e-07, 5.69567968e-15,\n",
+       "        4.60078333e-35, 2.35288953e-09],\n",
+       "       [1.42428641e-04, 9.99857458e-01, 1.13358619e-07, 4.58868951e-15,\n",
+       "        2.66564040e-30, 9.89525855e-11],\n",
+       "       [7.43774594e-18, 2.98326877e-13, 2.80494525e-09, 3.19101077e-02,\n",
+       "        1.00802482e-42, 9.68089890e-01],\n",
+       "       [7.44309628e-08, 1.16343406e-20, 8.16261450e-11, 4.03693545e-07,\n",
+       "        1.44496099e-39, 9.99999522e-01],\n",
+       "       [3.51667363e-08, 2.35829469e-14, 9.94969318e-01, 3.96167381e-06,\n",
+       "        1.63423510e-24, 5.02668470e-03],\n",
+       "       [3.47974667e-10, 9.01498317e-06, 9.99990985e-01, 1.53858831e-21,\n",
+       "        1.23132261e-32, 2.78935977e-15],\n",
+       "       [2.96113675e-02, 9.69001058e-01, 3.51131225e-08, 5.62544691e-06,\n",
+       "        1.07591844e-26, 1.38191396e-03],\n",
+       "       [8.91550826e-12, 1.03775590e-13, 4.48998829e-07, 3.73692233e-03,\n",
+       "        1.12959523e-34, 9.96262629e-01],\n",
+       "       [3.25294899e-16, 5.99389394e-23, 9.91367942e-01, 1.16219591e-08,\n",
+       "        1.34568813e-39, 8.63204625e-03],\n",
+       "       [9.99999983e-01, 1.29382162e-08, 3.66591419e-09, 3.59243805e-18,\n",
+       "        7.72077853e-33, 4.32164050e-10],\n",
+       "       [2.07422276e-01, 9.09994760e-10, 3.26627234e-13, 1.76395518e-06,\n",
+       "        8.34806864e-36, 7.92575959e-01],\n",
+       "       [5.49865953e-02, 2.79117003e-11, 6.50537879e-04, 1.78040331e-03,\n",
+       "        3.46287778e-20, 9.42582463e-01],\n",
+       "       [1.74322631e-02, 1.35307928e-13, 6.57995520e-09, 7.68373912e-02,\n",
+       "        8.06007948e-19, 9.05730339e-01],\n",
+       "       [6.07832623e-22, 9.99999980e-01, 2.00030653e-08, 1.68818211e-13,\n",
+       "        4.02151814e-41, 1.18457077e-13]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -286,7 +320,7 @@
     " [ 0.,  5.,  2.,  3.],\n",
     " [ 7.,  0.,  6.,  8.]])\n",
     "y = np.array([3, 6, 5, 6, 6, 3, 4, 5, 5, 5, 6, 6, 3, 2, 5])\n",
-    "model = FNNClassifier(1, 2, activation = 'tanh', optimizer = 'sgd', batch_size = 25, num_epochs = 200)\n",
+    "model = FNNClassifier(1, 1, activation = 'tanh', optimizer = 'normal', batch_size = 25, num_epochs = 10)\n",
     "model.fit(X, y)\n",
     "model.predict_proba(X)"
    ]
