--- a/Fashion.ipynb
+++ b/Fashion.ipynb
@@ -372,8 +372,14 @@
     "        'learning_rate' : 0.001,\n",
     "        'weight_init' : 'random'\n",
     "    }\n",
-    "    wandb.init(config = def_params)\n",
+    "    sweep_v = wandb.init(config = def_params, reinit = True)\n",
     "    config = wandb.config\n",
+    "    \n",
+    "    sweep_v.run.name = config.layer_size + '_' + config.num_layers + '_' + config.activation[0] + '_'\n",
+    "        + config.optimizer[:2] + '_' + config.weight_decay + '_' + config.batch_size + '_' + config.num_epochs \n",
+    "        + '_' + config.learning_rate + '_' + config. + '_' + config.weight_init[0]\n",
+    "    sweep_v.run.save()\n",
+    "    \n",
     "    model = FNNClassifier(**config)\n",
     "    model.fit(X_train, Y_train)\n",
     "    Y_predict = model.predict(X_test)\n",
