--- a/Assignment 1/Fashion.ipynb
+++ b/Assignment 1/Fashion.ipynb
@@ -70,13 +70,13 @@
     "                 num_epochs = 200,\n",
     "                 weight_init = 'Xavier',\n",
     "                 loss = 'cross_entropy'):\n",
-    "        self.activation = activation  # 'identity', 'logistic', 'tanh', 'relu'\n",
+    "        self.activation = activation  # 'sigmoid', 'tanh', 'ReLU'\n",
     "        self.optimizer = optimizer  # 'normal', 'sgd', 'momentum', 'nesterov', 'rmsprop', 'adam', 'nadam'\n",
     "        self.weight_decay = weight_decay  # L2 regularization hyperparameter\n",
     "        self.batch_size = batch_size  # Batch size\n",
     "        self.learning_rate = learning_rate  # Learning Rate\n",
     "        self.num_epochs = num_epochs  # Number of epochs\n",
-    "        self.weight_init = weight_init  # 'random', 'xavier'\n",
+    "        self.weight_init = weight_init  # 'random', 'Xavier'\n",
     "        self.loss = loss  # 'cross_entropy', 'square'\n",
     "        self.n = 100\n",
     "        self.K = 10\n",
