--- a/Assignment 1/Fashion.ipynb
+++ b/Assignment 1/Fashion.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from keras.datasets import fashion_mnist\n",
+    "from keras.datasets import fashion_mnist, mnist\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "import seaborn as sn\n",
@@ -518,6 +518,36 @@
     "plt.figure(figsize = (10, 10))\n",
     "v = sn.heatmap(conf_mat, cmap = 'YlGnBu', annot = True, fmt = 'd')\n",
     "wandb.log({'Confusion matrix' : wandb.Image(v)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Our recommendation for the MNIST Dataset\n",
+    "\n",
+    "(X_train, Y_train), (X_test, Y_test) = mnist.load_data()\n",
+    "X_train_new = X_train.reshape(\n",
+    "    (X_train.shape[0], X_train.shape[1] * X_train.shape[2]))\n",
+    "X_test_new = X_test.reshape(\n",
+    "    (X_test.shape[0], X_test.shape[1] * X_test.shape[2]))\n",
+    "\n",
+    "model = FNNClassifier(128, 4, 'ReLU', 'sgd', 0, 16, 0.0001, 10, 'Xavier')\n",
+    "model.fit(X_train_new, Y_train)\n",
+    "Y_pred = model.predict(X_test_new)\n",
+    "print(model.accuracy(Y_test, Y_pred))\n",
+    "\n",
+    "model = FNNClassifier(128, 4, 'ReLU', 'nadam', 0, 16, 0.001, 100, 'Xavier')\n",
+    "model.fit(X_train_new, Y_train)\n",
+    "Y_pred = model.predict(X_test_new)\n",
+    "print(model.accuracy(Y_test, Y_pred))\n",
+    "\n",
+    "model = FNNClassifier(128, 4, 'ReLU', 'adam', 0, 16, 0.001, 100, 'Xavier')\n",
+    "model.fit(X_train_new, Y_train)\n",
+    "Y_pred = model.predict(X_test_new)\n",
+    "print(model.accuracy(Y_test, Y_pred))"
    ]
   }
  ],
