--- a/Assignment 2/Natural.ipynb
+++ b/Assignment 2/Natural.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "mounted-conviction",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "optical-novelty",
    "metadata": {},
    "outputs": [],
@@ -123,15 +123,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "matched-seminar",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 9000 images belonging to 10 classes.\n",
+      "Found 999 images belonging to 10 classes.\n",
+      "Found 2000 images belonging to 10 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "dataset_path = \"../../nature_12K/inaturalist_12K\"\n",
     "train_path = dataset_path + \"/train\"\n",
     "test_path = dataset_path + \"/val\"\n",
-    "max_shape = (300, 300, 3)\n",
+    "max_shape = (256, 256, 3)\n",
     "\n",
     "data_train = ImageDataGenerator(validation_split = 0.1)#, rescale = 1. / 255)\n",
     "\n",
@@ -139,28 +149,22 @@
     "\n",
     "train_generator = data_train.flow_from_directory(\n",
     "        train_path,\n",
-    "        target_size=(max_shape[0], max_shape[1]),\n",
-    "        batch_size=64,classes=None,\n",
     "        class_mode='categorical',\n",
     "        subset = 'training')\n",
     "\n",
     "validation_generator = data_train.flow_from_directory(\n",
     "        train_path,\n",
-    "        target_size=(max_shape[0], max_shape[1]),\n",
-    "        batch_size=64,classes=None,\n",
     "        class_mode='categorical',\n",
     "        subset = 'validation')\n",
     "\n",
     "test_generator = data_test.flow_from_directory(\n",
     "        test_path,\n",
-    "        target_size=(max_shape[0], max_shape[1]),\n",
-    "        batch_size=64,classes=None,\n",
     "        class_mode='categorical')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "convinced-johnson",
    "metadata": {},
    "outputs": [],
@@ -168,9 +172,9 @@
     "def train(model,\n",
     "          optimizer,\n",
     "          loss_fn,\n",
-    "          epochs=5):\n",
+    "          epochs=10):\n",
     "    model.compile(optimizer=optimizer, loss=loss_fn, metrics = ['accuracy'])\n",
-    "    model.fit(train_generator, epochs=epochs, validation_data=validation_generator, callbacks=[WandbCallback()])"
+    "    model.fit(train_generator, epochs=epochs, validation_data=validation_generator)#, callbacks=[WandbCallback()])"
    ]
   },
   {
@@ -333,20 +337,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "imposed-cruise",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = createCNN(n_filters = 32, filter_size = 3, n_dense = 100, num_conv_layers = 5, input_shape = (300, 300, 3), activation = 'relu', n_output = 10)"
+    "model = createCNN(n_filters = 32, filter_size = 3, n_dense = 100, num_conv_layers = 5, input_shape = max_shape, activation = 'relu', n_output = 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "buried-creativity",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d (Conv2D)              (None, 254, 254, 32)      896       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d (MaxPooling2D) (None, 127, 127, 32)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_1 (Conv2D)            (None, 125, 125, 32)      9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 62, 62, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 60, 60, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 30, 30, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 28, 28, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 12, 12, 32)        9248      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_4 (MaxPooling2 (None, 6, 6, 32)          0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 1152)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 100)               115300    \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 10)                1010      \n",
+      "=================================================================\n",
+      "Total params: 154,198\n",
+      "Trainable params: 154,198\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -356,7 +401,17 @@
    "execution_count": null,
    "id": "human-documentary",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "  2/282 [..............................] - ETA: 47s - loss: 19.9166 - accuracy: 0.0938WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0983s vs `on_train_batch_end` time: 0.2405s). Check your callbacks.\n",
+      " 46/282 [===>..........................] - ETA: 4:12 - loss: 3.7756 - accuracy: 0.1333"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate an optimizer to train the model.\n",
     "optimizer = tf.keras.optimizers.Nadam()\n",
