--- a/Assignment 2/Natural.ipynb
+++ b/Assignment 2/Natural.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "mounted-conviction",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,10 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "brown-flight",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tf.config.list_physical_devices('GPU')"
    ]
@@ -31,7 +40,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "optical-novelty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +53,15 @@
     "                            layers.experimental.preprocessing.RandomRotation(0.2)])\n",
     "        model.add(data_augmentation)\n",
     "    \n",
-    "    if batch_normalize:\n",
-    "        model.add(layers.BatchNormalization(input_size=input_size))\n",
+    "    \n",
     "    for ii in range(0, num_conv_layers): # Number of convolutional layers is num_conv_layers\n",
     "        if ii == 0:\n",
+    "            if batch_normalize:\n",
+    "                model.add(layers.BatchNormalization(input_shape=input_shape))\n",
     "            model.add(layers.Conv2D(n_filters, (filter_size, filter_size), activation=activation, input_shape=input_shape))\n",
     "        else:\n",
+    "            if batch_normalize:\n",
+    "                model.add(layers.BatchNormalization())\n",
     "            model.add(layers.Conv2D(n_filters, (filter_size, filter_size), activation=activation))\n",
     "        model.add(layers.MaxPooling2D((2, 2)))\n",
     "        if dropout_conv != 0.0:\n",
@@ -70,7 +81,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "devoted-arizona",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "rubber-costume",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +122,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complicated-cleaning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "matched-seminar",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,8 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "convinced-johnson",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,8 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "victorian-school",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,18 +208,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "permanent-england",
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create sweep with ID: 42eow1pj\n",
+      "Sweep URL: https://wandb.ai/0x2e4/cs6910-a2/sweeps/42eow1pj\n"
+     ]
+    }
+   ],
    "source": [
     "sweep_id = wandb.sweep(sweep_config, entity = '0x2e4', project = 'cs6910-a2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "massive-daniel",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,9 +260,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "criminal-evans",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "wandb: Agent Starting Run: 6ajzk6b9 with config:\n",
+      "wandb: \tbatch_normalize: False\n",
+      "wandb: \tdata_augment: False\n",
+      "wandb: \tdropout: 0.4\n",
+      "wandb: \tfilter_size: 3\n",
+      "wandb: \tfilter_size_decay: 1\n",
+      "wandb: \tn_dense: 100\n",
+      "wandb: \tn_filters: 32\n",
+      "wandb: Currently logged in as: 0x2e4 (use `wandb login --relogin` to force relogin)\n",
+      "wandb: WARNING Ignored wandb.init() arg project when running a sweep\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Tracking run with wandb version 0.10.21<br/>\n",
+       "                Syncing run <strong style=\"color:#cdcd00\">polar-sweep-1</strong> to <a href=\"https://wandb.ai\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://wandb.ai/0x2e4/cs6910-a2\" target=\"_blank\">https://wandb.ai/0x2e4/cs6910-a2</a><br/>\n",
+       "                Sweep page: <a href=\"https://wandb.ai/0x2e4/cs6910-a2/sweeps/42eow1pj\" target=\"_blank\">https://wandb.ai/0x2e4/cs6910-a2/sweeps/42eow1pj</a><br/>\n",
+       "Run page: <a href=\"https://wandb.ai/0x2e4/cs6910-a2/runs/6ajzk6b9\" target=\"_blank\">https://wandb.ai/0x2e4/cs6910-a2/runs/6ajzk6b9</a><br/>\n",
+       "                Run data is saved locally in <code>C:\\Users\\Shriram\\Documents\\GitHub\\DeepLearning\\Assignment 2\\wandb\\run-20210407_234205-6ajzk6b9</code><br/><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "144/282 [==============>...............] - ETA: 3:25 - loss: 11.7345 - accuracy: 0.1006"
+     ]
+    }
+   ],
    "source": [
     "wandb.agent(sweep_id, run)"
    ]
@@ -258,7 +313,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immune-angola",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +338,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "regular-accent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +357,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "champion-delta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +367,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invisible-addition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +378,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "executive-organic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,61 +387,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "imposed-cruise",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = createCNN(n_filters = 32, filter_size = 3, n_dense = 100, num_conv_layers = 5, input_shape = max_shape, activation = 'relu', n_output = 10)"
+    "model = createCNN(n_filters = 32, filter_size = 3, n_dense = 100, num_conv_layers = 5, input_shape = max_shape, activation = 'relu', n_output = 10, batch_normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "buried-creativity",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d (Conv2D)              (None, 254, 254, 32)      896       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d (MaxPooling2D) (None, 127, 127, 32)      0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_1 (Conv2D)            (None, 125, 125, 32)      9248      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 62, 62, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 60, 60, 32)        9248      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 30, 30, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 28, 28, 32)        9248      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 14, 14, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 12, 12, 32)        9248      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 6, 6, 32)          0         \n",
-      "_________________________________________________________________\n",
-      "flatten (Flatten)            (None, 1152)              0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 100)               115300    \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 10)                1010      \n",
-      "=================================================================\n",
-      "Total params: 154,198\n",
-      "Trainable params: 154,198\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -399,19 +406,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "human-documentary",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n",
-      "  2/282 [..............................] - ETA: 47s - loss: 19.9166 - accuracy: 0.0938WARNING:tensorflow:Callbacks method `on_train_batch_end` is slow compared to the batch time (batch time: 0.0983s vs `on_train_batch_end` time: 0.2405s). Check your callbacks.\n",
-      " 46/282 [===>..........................] - ETA: 4:12 - loss: 3.7756 - accuracy: 0.1333"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instantiate an optimizer to train the model.\n",
     "optimizer = tf.keras.optimizers.Nadam()\n",
@@ -426,7 +422,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reduced-delivery",
    "metadata": {},
    "outputs": [],
    "source": []
