debugging pre_trained.ipynb

--- a/Assignment 2/Pre_trained.ipynb
+++ b/Assignment 2/Pre_trained.ipynb
@@ -209,7 +209,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "273/282 [============================>.] - ETA: 21s - loss: 2.3725 - accuracy: 0.1454"
+      "282/282 [==============================] - ETA: 0s - loss: 2.3733 - accuracy: 0.1457"
      ]
     }
    ],
@@ -228,7 +228,7 @@
     "          loss_fn,\n",
     "          ):\n",
     "    model.compile(optimizer=optimizer, loss=loss_fn, metrics = ['accuracy'])\n",
-    "    model.fit(train_generator, epochs=10, validation_data=validation_generator)#, callbacks=[WandbCallback()])"
+    "    model.fit(train_generator, epochs=10, validation_data=validation_generator, callbacks=[WandbCallback()])"
    ]
   },
   {
